htdocs/theme/raw/sass/features/_comment.scss
.comment-item {
    @include clearfix;

    .usericon-heading {
        .list-group-item-heading {
            font-size: $font-size-base;
            font-family: $font-family-base;
            font-weight: $font-weight-normal;
            margin-left: 0;
            margin-bottom: $spacing-base;
        }
    }

    .col-width-100 .bt-comment &,
    .viewfooter &,
    .modal-docked.active &,
    .bt-peerassessment & {
        .comment-content {
          padding-left: 2.875rem; // 46px;
        }

        @include media-breakpoint-up(lg) {

            .comment-attachment {
                border-left: $list-group-border-width solid $list-group-border-color;

                .card {
                    @include card-as-link();
                    width: 100%;
                    margin-top: 0;
                }
                .card-header,
                .card-header a,
                .list-group-item {
                    background-color: transparent;
                }
                .collapsed {
                    font-size: $font-size-base;
                    pointer-events: none;
                }
                // no need to collapse
                .collapse-indicator {
                    display: none;
                }
                .collapse {
                    opacity: 1;
                    display: block;
                    visibility: visible;
                }
                .attachmessage {
                    display: block;
                    margin: $spacing-base 0;
                }
            }
        }
    }
    // Set opacity and visibility comment attachment inside modal docked
    .modal-docked & {
        @include media-breakpoint-up(lg) {
            .comment-attachment {
                .collapse {
                    transition: opacity 0s 0.2s;
                    opacity: 0;
                    display: block;
                    visibility: hidden;
                }
            }
        }
    }
    .collapse & {
        &:first-child {
            // To override card listgroup no top border on first-child
            border-top: $list-group-border-width solid $list-group-border-color !important;
            border-bottom: 0;
        }
    }

    // Indentation for nested comments
    @for $i from 1 through 5 {
        &.indent-#{$i} {
            $width: 100 - percentage(($i * 2)/100);
            width: $width;
            margin-left: auto;
            margin-right: 0;
            .user-icon {
                max-width: 3.125rem; // 50px;
                display: block;
            }
        }
    }

    // Nested comments
    .commentreplyview & {
        border-top-width: $list-group-border-width;
        width: 100%;
    }
}

